cabal-version:  2.2
name:           unfoldr
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/githubuser/unfoldr#readme>
homepage:       https://github.com/githubuser/unfoldr#readme
bug-reports:    https://github.com/githubuser/unfoldr/issues
author:         Author name here
maintainer:     example@example.com
copyright:      20YY Author name here
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/githubuser/unfoldr

common common-stanza
  ghc-options:         -Wno-type-defaults -fwarn-incomplete-patterns
  build-depends:
      base >=4.15
    , HUnit 
    , QuickCheck
    , containers
    , filepath
    , pretty
    , network
    , directory
    , random
    , mtl
    , doctest
  default-language:
    GHC2021
  default-extensions:


library
  import:
      common-stanza
  exposed-modules:
      OCamlSyntax
      OCamlParser
      OCamlPrettyPrinter
      OCamlTypes
      OCamlStepper
      State
      Parser
      OCamlTypes
      -- if you add modules to your project, list them here
      -- so that they will be available to the executable and test suite
  hs-source-dirs:
      src

executable unfoldr-exe
  import:
      common-stanza
  main-is: 
      Main.hs
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      unfoldr


test-suite unfoldr-test
  import:
      common-stanza
  type: 
      exitcode-stdio-1.0
  main-is: 
      unfoldr-test.hs
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      unfoldr

